--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
-  "build": {
-    "env": {},
-    "command": "npm ci && npm run build",
-    "outputDirectory": "dist"
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
+  ]
 }
