--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@types/react": "^19.2.7",
+            "@types/react-dom": "^19.2.3",
             "@zxing/browser": "*",
             "@zxing/library": "^0.21.3",
             "class-variance-authority": "^0.7.1",
