--- a/package.json
+++ b/package.json
@@ -32,16 +32,19 @@
             "@radix-ui/react-tooltip": "^1.1.8",
             "@types/react": "^19.2.7",
             "@types/react-dom": "^19.2.3",
-            "@zxing/browser": "*",
+            "@zxing/browser": "^0.1.5",
             "@zxing/library": "^0.21.3",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
+            "deno": "^2.6.0",
             "embla-carousel-react": "^8.6.0",
             "hono": "*",
             "input-otp": "^1.4.2",
+            "jsqr": "^1.4.0",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
+            "quagga": "^0.12.1",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
