--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
             "deno": "^2.6.0",
             "embla-carousel-react": "^8.6.0",
             "hono": "*",
+            "html5-qrcode": "^2.3.8",
             "input-otp": "^1.4.2",
             "jsqr": "^1.4.0",
             "lucide-react": "^0.487.0",
