--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
             "react-hook-form": "^7.55.0",
+            "react-qr-barcode-scanner": "^2.1.19",
             "react-resizable-panels": "^2.1.7",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
@@ -58,6 +59,7 @@
       },
       "devDependencies": {
             "@types/node": "^20.10.0",
+            "@vitejs/plugin-basic-ssl": "^2.1.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "vite": "6.3.5"
       },
